Fix scroll panel jump regression in bubble layout

--- a/res/css/views/rooms/_EventBubbleTile.scss
+++ b/res/css/views/rooms/_EventBubbleTile.scss
@@ -468,8 +468,6 @@ limitations under the License.
 }
 
 .mx_EventListSummary[data-expanded=true][data-layout=bubble] {
-    display: contents;
-
     .mx_EventTile {
         padding: 2px 0;
     }
